--- a/style.css
+++ b/style.css
@@ -95,3 +95,8 @@ ul li.checked{
     color: #555;
     text-decoration: line-through;
 }
+
+ul li.checked::before{
+    background-image: url(images/unchecked.png);
+    
+}
