--- a/style.css
+++ b/style.css
@@ -101,3 +101,22 @@ ul li.checked::before{
     background-image: url(images/unchecked.png);
 
 }
+
+ul li span{
+
+    position:absolute;
+    right : 0;
+    top : 5px;
+    width : 40px;
+    height : 40px;
+    font-size : 22px;
+    color: #555;
+    line-height : 40px;
+    text-align : center;
+    border-radius : 50px;
+}
+
+ul li span:hover{
+    background : #edeef0;
+
+}
